--- a/sentiment_dev_book.ipynb
+++ b/sentiment_dev_book.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +26,8 @@
     "from keras.layers import Dense\n",
     "from keras.optimizers import Adam\n",
     "import keras.backend as K\n",
-    "from sklearn.externals import joblib"
+    "from sklearn.externals import joblib\n",
+    "from keras.callbacks import EarlyStopping"
    ]
   },
   {
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -575,7 +584,7 @@
        "[500000 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -630,11 +639,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vect = TfidfVectorizer(max_features=1000)"
+    "vect = TfidfVectorizer(max_features=10000)"
    ]
   },
   {
@@ -648,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +666,7 @@
        "['vector.pkl']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +772,7 @@
        "4        0        0        0        0        1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +798,7 @@
     {
      "data": {
       "text/plain": [
-       "(375000, 1000)"
+       "(375000, 10000)"
       ]
      },
      "execution_count": 12,
@@ -809,49 +818,22 @@
    "source": [
     "K.clear_session()\n",
     "model = Sequential()\n",
-    "opt = Adam()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(units=128, activation='relu', input_dim=len(vect.get_feature_names())))\n",
-    "model.add(Dense(16, activation='relu'))\n",
-    "model.add(Dense(5, activation='softmax'))\n",
-    "\n",
-    "model.compile(opt, loss='categorical_crossentropy')"
+    "opt = Adam()\n",
+    "es = EarlyStopping(patience=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_1 (Dense)              (None, 128)               128128    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 16)                2064      \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 5)                 85        \n",
-      "=================================================================\n",
-      "Total params: 130,277\n",
-      "Trainable params: 130,277\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.summary()"
+    "model.add(Dense(units=64, activation='tanh', input_dim=len(vect.get_feature_names())))\n",
+    "model.add(Dense(4, activation='relu'))\n",
+    "model.add(Dense(16, activation='relu'))\n",
+    "model.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "model.compile(opt, loss='categorical_crossentropy')"
    ]
   },
   {
@@ -863,42 +845,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 337500 samples, validate on 37500 samples\n",
-      "Epoch 1/10\n",
-      "337500/337500 [==============================] - 6s 17us/step - loss: 0.9985 - val_loss: 0.9235\n",
-      "Epoch 2/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.9172 - val_loss: 0.9175\n",
-      "Epoch 3/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.9042 - val_loss: 0.9111\n",
-      "Epoch 4/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8909 - val_loss: 0.9050\n",
-      "Epoch 5/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8783 - val_loss: 0.9053\n",
-      "Epoch 6/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8670 - val_loss: 0.9024\n",
-      "Epoch 7/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8553 - val_loss: 0.9060\n",
-      "Epoch 8/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8444 - val_loss: 0.9059\n",
-      "Epoch 9/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8333 - val_loss: 0.9114\n",
-      "Epoch 10/10\n",
-      "337500/337500 [==============================] - 5s 15us/step - loss: 0.8227 - val_loss: 0.9174\n"
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_1 (Dense)              (None, 64)                640064    \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 4)                 260       \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 16)                80        \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 5)                 85        \n",
+      "=================================================================\n",
+      "Total params: 640,489\n",
+      "Trainable params: 640,489\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fb84057d4e0>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, batch_size=500, epochs=10, validation_split=0.1)"
+    "model.summary()"
    ]
   },
   {
@@ -910,16 +876,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "125000/125000 [==============================] - 6s 50us/step\n"
+      "Train on 337500 samples, validate on 37500 samples\n",
+      "Epoch 1/10\n",
+      "337500/337500 [==============================] - 84s 248us/step - loss: 0.9758 - val_loss: 0.8621\n",
+      "Epoch 2/10\n",
+      "337500/337500 [==============================] - 54s 160us/step - loss: 0.8390 - val_loss: 0.8614\n",
+      "Epoch 3/10\n",
+      "337500/337500 [==============================] - 55s 163us/step - loss: 0.8245 - val_loss: 0.8599\n",
+      "Epoch 4/10\n",
+      "337500/337500 [==============================] - 56s 165us/step - loss: 0.8165 - val_loss: 0.8640\n",
+      "Epoch 5/10\n",
+      "337500/337500 [==============================] - 55s 164us/step - loss: 0.8107 - val_loss: 0.8644\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9183939860458374"
+       "<keras.callbacks.History at 0x25280c7d780>"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, batch_size=500, epochs=10, validation_split=0.1, callbacks=[es])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125000/125000 [==============================] - 21s 170us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8668797902908325"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +951,7 @@
        "['model.pkl']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1003,43 +1006,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.338745e-01</td>\n",
-       "      <td>0.516598</td>\n",
-       "      <td>0.244421</td>\n",
-       "      <td>0.087095</td>\n",
-       "      <td>0.018011</td>\n",
+       "      <td>2.619189e-03</td>\n",
+       "      <td>0.018879</td>\n",
+       "      <td>0.170540</td>\n",
+       "      <td>0.323833</td>\n",
+       "      <td>0.484129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.461487e-02</td>\n",
-       "      <td>0.040656</td>\n",
-       "      <td>0.026618</td>\n",
-       "      <td>0.220688</td>\n",
-       "      <td>0.667424</td>\n",
+       "      <td>2.313532e-07</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.000843</td>\n",
+       "      <td>0.131217</td>\n",
+       "      <td>0.867928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.729411e-01</td>\n",
-       "      <td>0.383822</td>\n",
-       "      <td>0.199845</td>\n",
-       "      <td>0.038696</td>\n",
-       "      <td>0.004696</td>\n",
+       "      <td>6.319660e-01</td>\n",
+       "      <td>0.284619</td>\n",
+       "      <td>0.059927</td>\n",
+       "      <td>0.010904</td>\n",
+       "      <td>0.012584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.157542e-07</td>\n",
-       "      <td>0.000075</td>\n",
-       "      <td>0.084559</td>\n",
-       "      <td>0.869686</td>\n",
-       "      <td>0.045680</td>\n",
+       "      <td>5.687640e-06</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>0.001648</td>\n",
+       "      <td>0.144409</td>\n",
+       "      <td>0.853878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3.263609e-02</td>\n",
-       "      <td>0.078794</td>\n",
-       "      <td>0.175766</td>\n",
-       "      <td>0.562618</td>\n",
-       "      <td>0.150185</td>\n",
+       "      <td>1.446419e-05</td>\n",
+       "      <td>0.000559</td>\n",
+       "      <td>0.023755</td>\n",
+       "      <td>0.357861</td>\n",
+       "      <td>0.617811</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1047,29 +1050,20 @@
       ],
       "text/plain": [
        "        stars_1   stars_2   stars_3   stars_4   stars_5\n",
-       "0  1.338745e-01  0.516598  0.244421  0.087095  0.018011\n",
-       "1  4.461487e-02  0.040656  0.026618  0.220688  0.667424\n",
-       "2  3.729411e-01  0.383822  0.199845  0.038696  0.004696\n",
-       "3  1.157542e-07  0.000075  0.084559  0.869686  0.045680\n",
-       "4  3.263609e-02  0.078794  0.175766  0.562618  0.150185"
+       "0  2.619189e-03  0.018879  0.170540  0.323833  0.484129\n",
+       "1  2.313532e-07  0.000012  0.000843  0.131217  0.867928\n",
+       "2  6.319660e-01  0.284619  0.059927  0.010904  0.012584\n",
+       "3  5.687640e-06  0.000058  0.001648  0.144409  0.853878\n",
+       "4  1.446419e-05  0.000559  0.023755  0.357861  0.617811"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predictions.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import "
    ]
   }
  ],
