--- a/sentiment_dev_book.ipynb
+++ b/sentiment_dev_book.ipynb
@@ -605,40 +605,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocessing(string, punctuation):\n",
-    "    tokens = TreebankWordTokenizer().tokenize(string)\n",
-    "    tokens = [x for x in tokens if x not in punctuation]\n",
-    "    return ' '.join(tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from string import punctuation\n",
-    "punc = list(punctuation)\n",
-    "punc = [x for x in punc if x not in ['!', '?']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#X['no_punc'] = X['text'].apply(preprocessing, args=[punc])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -648,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -906,23 +872,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "125000/125000 [==============================] - 21s 170us/step\n"
+      "125000/125000 [==============================] - 19s 155us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8668797902908325"
+       "0.8167321469116211"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,11 +899,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearnearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = df['stars']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = predictions.argmax(axis=1)+1\n",
+    "target = y_test.values.argmax(axis=1)+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.71      0.79      0.75     12553\n",
+      "           2       0.51      0.45      0.48     11263\n",
+      "           3       0.53      0.44      0.48     17722\n",
+      "           4       0.57      0.60      0.58     37163\n",
+      "           5       0.74      0.77      0.76     46299\n",
+      "\n",
+      "   micro avg       0.64      0.64      0.64    125000\n",
+      "   macro avg       0.61      0.61      0.61    125000\n",
+      "weighted avg       0.64      0.64      0.64    125000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.classification_report(target, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9885  1758   358   284   268]\n",
+      " [ 2578  5114  2443   856   272]\n",
+      " [  667  2440  7797  5892   926]\n",
+      " [  312   521  3455 22147 10728]\n",
+      " [  393   145   622  9644 35495]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.confusion_matrix(target, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.643504\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.accuracy_score(target, pred))"
    ]
   },
   {
